tests/array_type_const_fn_call_assert_bad.stderr
tests/array_type_const_fn_call_assert_bad.hop:8:13: error: HOP2054: array length must be a const integer expression: assert condition evaluated to false during const evaluation
